fix: 拖动一次后，直接去点击原来的位置，就发生了位置交换

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                     item.style.transition = 'none'
                     item.style.transform = 'translate3d(0px, 0px, 0px)'
                 }
+                this.referenceElement = null
             }
 
             init() {
